--- a/src/main/resources/application.pro.properties
+++ b/src/main/resources/application.pro.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:28761/railway
 spring.datasource.username=root
 spring.datasource.password=E1C4c6e1cB2C1CehaGaC5e1ahE2GFeAa
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
