--- a/src/main/resources/application.pro.properties
+++ b/src/main/resources/application.pro.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:28761/railway?useSSL=false
+spring.datasource.url=jdbc:mysql://root:E1C4c6e1cB2C1CehaGaC5e1ahE2GFeAa@roundhouse.proxy.rlwy.net:28761/railway?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=E1C4c6e1cB2C1CehaGaC5e1ahE2GFeAa
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
