--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/electronic
-#spring.datasource.username=root
-#spring.datasource.password=Sagarji12#
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.url=jdbc:mysql://root:E1C4c6e1cB2C1CehaGaC5e1ahE2GFeAa@roundhouse.proxy.rlwy.net:28761/railway?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=E1C4c6e1cB2C1CehaGaC5e1ahE2GFeAa
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 spring.profiles.active=${ENV:dev}
 
